--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -11,7 +11,5 @@ steps:
   args:
     - '-c'
     - |
-      docker build -t gcr.io/sns2ps-api:$TAG_NAME -t $_DOCKER_ACCOUNT/sns2ps-api:latest -t $_DOCKER_ACCOUNT/sns2ps-api:$(cat major).$(cat minor) -t $_DOCKER_ACCOUNT/sns2ps-api:$(cat major) .
+      docker build -t gcr.io/sns2ps-api-image-build-217d/sns2ps-api:$TAG_NAME.
       docker push gcr.io/sns2ps-api-image-build-217d/sns2ps-api:$TAG_NAME
-      docker push gcr.io/sns2ps-api-image-build-217d/sns2ps-api:$(cat major)
-      docker push gcr.io/sns2ps-api-image-build-217d/sns2ps-api:$(cat major).$(cat minor)
