--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -13,4 +13,4 @@ steps:
     - |
       echo "[$SHORT_SHA]"
       docker build -t gcr.io/sns2ps-api-image-build-217d/sns2ps-api:$SHORT_SHA .
-      # docker push gcr.io/sns2ps-api-image-build-217d/sns2ps-api:$SHORT_SHA
+      docker push gcr.io/sns2ps-api-image-build-217d/sns2ps-api:$SHORT_SHA
